prevent overflow in body

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0px;
     cursor: default;
+    overflow: hidden;
 }
 
 body > div {
